--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,8 @@ dependencies {
     testImplementation 'androidx.test:core:1.3.0'
 // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:3.5.11'
+    // ViewModel
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
 }
